Closed
Bug 773665
Opened 13 years ago
Closed 13 years ago
crash in CrashReporter::GetPendingDir
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
RESOLVED
FIXED
mozilla16
People
(Reporter: scoobidiver, Assigned: benjamin)
References
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
|
948 bytes,
patch
|
ted
:
review+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
It's currently #1 top crasher in today's build where it appeared for the first time. The regression window is:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=46804c31366b&tochange=6489be1890c0
It's probably a regression from bug 771251 as there are no Flash crashes in this build.
Signature CrashReporter::GetPendingDir More Reports Search
UUID bfd71428-b350-4e3e-b99e-7f7d72120713
Date Processed 2012-07-13 15:35:03
Uptime 66
Last Crash more than 3 months before submission
Install Age 15.4 minutes since version was first installed.
Install Time 2012-07-13 15:18:45
Product Firefox
Version 16.0a1
Build ID 20120713030548
Release Channel nightly
OS Windows NT
OS Version 6.1.7601 Service Pack 1
Build Architecture x86
Build Architecture Info GenuineIntel family 6 model 37 stepping 2
Crash Reason EXCEPTION_ACCESS_VIOLATION_READ
Crash Address 0x0
App Notes
AdapterVendorID: 0x8086, AdapterDeviceID: 0x0046, AdapterSubsysID: 040a1028, AdapterDriverVersion: 8.15.10.2418
D2D? D2D+ DWrite? DWrite+ D3D10 Layers? D3D10 Layers+
EMCheckCompatibility True
Adapter Vendor ID 0x8086
Adapter Device ID 0x0046
Total Virtual Memory 4294836224
Available Virtual Memory 3775848448
System Memory Use Percentage 28
Available Page File 13537292288
Available Physical Memory 5987373056
Frame Module Signature Source
0 xul.dll CrashReporter::GetPendingDir toolkit/crashreporter/nsExceptionHandler.cpp:1711
1 xul.dll CrashReporter::MoveToPending toolkit/crashreporter/nsExceptionHandler.cpp:1914
2 xul.dll CrashReporter::OnChildProcessDumpRequested toolkit/crashreporter/nsExceptionHandler.cpp:1970
3 xul.dll google_breakpad::CrashGenerationServer::HandleDumpRequest toolkit/crashreporter/google-breakpad/src/client/windows/crash_generation/crash_generation_server.cc:820
4 xul.dll google_breakpad::CrashGenerationServer::OnDumpRequest toolkit/crashreporter/google-breakpad/src/client/windows/crash_generation/crash_generation_server.cc:757
5 ntdll.dll RtlpTpWaitCallback
6 ntdll.dll TppWaitpExecuteCallback
7 ntdll.dll TppCallbackCheckThreadBeforeCallback
8 kernel32.dll BaseThreadInitThunk
9 ntdll.dll __RtlUserThreadStart
10 ntdll.dll _RtlUserThreadStart
More reports at:
https://crash-stats.mozilla.com/report/list?signature=CrashReporter%3A%3AGetPendingDir
| Assignee | ||
Comment 1•13 years ago
|
||
Assignee: nobody → benjamin
Status: NEW → ASSIGNED
Attachment #641941 -
Flags: review?(ted.mielczarek)
Comment 2•13 years ago
|
||
Comment on attachment 641941 [details] [diff] [review]
Null-check, rev. 1
Review of attachment 641941 [details] [diff] [review]:
-----------------------------------------------------------------
Kind of a bummer, I guess we'll just orphan these files? We should investigate why this winds up as a topcrash, presumably there must be some shutdown plugin topcrash.
Attachment #641941 -
Flags: review?(ted.mielczarek) → review+
Updated•13 years ago
|
| Assignee | ||
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 4•13 years ago
|
||
The outcome of IRC discussions is that this is a common shutdown crash that bc is seeing, and that this patch won't make it any worse.
| Assignee | ||
Comment 5•13 years ago
|
||
Comment on attachment 641941 [details] [diff] [review]
Null-check, rev. 1
Bug caused by (feature/regressing bug #): bug 771251
User impact if declined: crashes (assuming we take bug 771251, which we really need for correct Flash crash reporting
Testing completed (on m-c, etc.): landed on m-c, should be verified by crash-stats tomorrow
Risk to taking this patch (and alternatives if risky): no risk (all the risk is in bug 771251)
Attachment #641941 -
Flags: approval-mozilla-aurora?
| Reporter | ||
Updated•13 years ago
|
status-firefox16:
--- → fixed
Target Milestone: --- → mozilla16
Comment 6•13 years ago
|
||
Tracking for 15 which I think is what you're looking for here now, post merge.
status-firefox15:
--- → affected
tracking-firefox15:
--- → +
Comment 7•13 years ago
|
||
Comment on attachment 641941 [details] [diff] [review]
Null-check, rev. 1
[Triage Comment]
Please land to beta immediately so we have this in our first beta build.
Attachment #641941 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta+
| Assignee | ||
Comment 8•13 years ago
|
||
Comment 9•13 years ago
|
||
According to the Socorro interface, this crash stopped reproducing:
https://crash-stats.mozilla.com/report/list?query_search=signature&query_type=contains&reason_type=contains&range_value=4&range_unit=weeks&hang_type=any&process_type=any&signature=CrashReporter%3A%3AGetPendingDir
You need to log in
before you can comment on or make changes to this bug.
Description
•