Bug 773665 - Don't crash during shutdown because XPCOM is already mostly-dead and refuses to create a local file, r=ted

--HG--
extra : rebase_source : dd4f87bdc75b2886e34088d954622d8422143e01